[package]
name = "vhost-gpu-backend"
version = "0.1.0"
authors = ["z5661068@gmail.com <z5661068@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
virgl_renderer = ["rutabaga_gfx/virgl_renderer"]

[dependencies]
rutabaga_gfx = { path = "third-party/rutabaga_gfx" }
base = { path = "third-party/base", package = "base" }
data_model = { path = "third-party/data_model"}
vm-memory = { version = ">=0.2.2", features = ["backend-mmap"] }
libc = "*"